# product-search-retrieval-ranking

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: local_ports.yaml  services.yaml
data/: README.md
data/raw/: README.md
docs/: architecture.md  failure_analysis.md  final_results.md  github_readme_standard.md  lessons_learned.md  local_setup.md  portfolio_walkthrough.md  prd_reference.md  ui_plan_spec.md
scripts/: benchmark_latency.py  build_index.py  doctor.py  prepare_data.py  run_eval.py  sweep_ltr_candidate_depth.py  train_ranker.py
src/api/: app.py  schemas.py
src/api/static/: app.css  app.js
src/api/templates/: index.html
src/common/: config.py  constants.py  io.py  runtime.py  text.py  types.py
src/data_prep/: prepare.py
src/evaluation/: metrics.py
src/features/: extractor.py
src/indexing/: embeddings.py  mappings.py  opensearch.py
src/ranking/: service.py  train.py
src/retrieval/: cache.py  service.py
tests/unit/: test_indexing.py  test_ltr_service.py  test_metrics.py  test_prepare_helpers.py  test_retrieval_service.py  test_text.py
