[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-esci-search-platform"
version = "0.1.0"
description = "Local-first Amazon ESCI retrieval, ranking, and evaluation platform."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "pandas>=2.2,<3",
  "pyarrow>=19,<20",
  "numpy>=2.1,<3",
  "PyYAML>=6.0,<7",
  "pydantic>=2.10,<3",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.34,<1",
  "httpx>=0.28,<1"
]

[project.optional-dependencies]
retrieval = [
  "opensearch-py>=2.8,<3",
  "sentence-transformers>=3.4,<4",
  "torch>=2.6,<3"
]
ranking = [
  "xgboost>=2.1,<3",
  "mlflow>=2.21,<3",
  "scikit-learn>=1.6,<2"
]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
